<resources>
    <string name="app_name">What ToDo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="done">Done</string>
    <string name="goal_name">Goal Name</string>
    <string name="name">Name</string>
    <string name="units">Units</string>
    <string name="goal_unit_examples">Books, Hours, Miles, etc.</string>
    <string name="goal_total">Goal Total</string>
    <string name="input_a_number">Input a number</string>
    <string name="refresh_frequency">Refresh Frequency</string>
    <string name="color">Color</string>
    <string name="choose_color">choose color</string>
    <string name="choose_icon">choose icon</string>
    <string name="lists">Lists</string>
    <string name="goals">Goals</string>
    <string name="add_list">Add List</string>
    <string name="add_goal">Add Goal</string>
    <string name="user_stats">User Stats</string>
    <string name="collection">Collection</string>
    <string name="settings">Settings</string>
</resources>
