<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/lists">
        <menu>

        </menu>
    </item>

    <item android:title="@string/goals">
        <menu>

        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_list"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/add_list" />
        <item
            android:id="@+id/nav_add_goal"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/add_goal" />
        <item
            android:id="@+id/nav_user_info"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/user_stats" />
        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/collection" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

</menu>
