<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraitlayout_addgoal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/button_add_goal_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="439dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_add_goal_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_addgoal_goalname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/goal_name" />

            <EditText
                android:id="@+id/edittext_addgoal_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingTop="8dp"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/textview_addgoal_units"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/units" />

            <EditText
                android:id="@+id/edittext_addgoal_units"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/goal_unit_examples"
                android:inputType="textPersonName"
                android:paddingTop="8dp"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/textview_addgoal_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/goal_total" />

            <EditText
                android:id="@+id/edittext_addgoal_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/input_a_number"
                android:inputType="number"
                android:paddingTop="8dp"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/textview_addgoal_frequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/refresh_frequency" />

            <Spinner
                android:id="@+id/spinner_addgoal_frequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/textview_addgoal_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="Color and Icon"
                tools:paddingTop="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|start"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageview_addgoal_color"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/choose_color"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp"
                    app:srcCompat="@android:color/holo_green_dark" />

                <ImageView
                    android:id="@+id/imageview_addgoal_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/choose_icon"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp"
                    app:srcCompat="@android:color/holo_orange_light" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_addgoal_pickdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp"
                    android:text="End Date" />

                <Switch
                    android:id="@+id/switch_addgoal_toggleenddate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />

            </LinearLayout>

            <CalendarView
                android:id="@+id/calendarview_addgoal_enddate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="261dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>